--- a/public/index.html
+++ b/public/index.html
@@ -4,40 +4,26 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <meta name="author" content="Sehyeon Park">
+    <meta name="keywords" content="웹개발자, 프론트엔드, 포트폴리오, front-end, developer, programmer, coding, 코딩, 주니어 개발자, 신입 개발자">
+    <meta name="description" content="주니어 Front-end 개발자 박세현의 포트폴리오입니다.">
+    <meta property="og:url" content="https://keeper991.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Sehyeon Park's Portfolio">
+    <meta property="og:description" content="주니어 Front-end 개발자 박세현의 포트폴리오입니다.">
+    <meta property="og:image" content="%PUBLIC_URL%/ogImage.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="">
+    <meta property="twitter:url" content="https://keeper991.github.io/">
+    <meta name="twitter:title" content="Sehyeon Park's Portfolio">
+    <meta name="twitter:description" content="주니어 Front-end 개발자 박세현의 포트폴리오입니다.">
+    <meta name="twitter:image" content="%PUBLIC_URL%/ogImage.jpg">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Sehyeon Park's Portfolio</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
